# b9-dashboard

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENT_SPECIFICATIONS.md  Answer.md  CLAUDE.md  CLOUDFLARE_TUNNEL_SETUP.md  DEPLOYMENT.md  Dockerfile  Dockerfile.worker  HETZNER_MIGRATION_READY.md  INFRASTRUCTURE.md  MIGRATION_COMPLETED.md  MIGRATION_TO_SINGLE_SUPABASE.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_SUMMARY.md  Plan.md  Procfile  QUICK_START.md  README.md  REDDIT_SCRAPER_COMPREHENSIVE_ISSUES.md  REDDIT_SCRAPER_ISSUES_DASHBOARD.md  ROADMAP.md  SMART_FILTER_README.md  deploy-preview.sh  deploy-production.sh  docker-compose.hetzner.yml  docker-compose.worker.yml  lefthook.yml  main.py  package-lock.json  package.json  render.yaml  requirements-combined.txt  run_scraper.py  start.sh  supervisord.conf  test_categorization_working.py  test_debug_categorization.py  (+5 more)
.githooks/: pre-commit
backend/: .env.example  .flake8  DOCUMENTATION_INDEX.md  HETZNER_ENV_SETUP.md  README.md  debug_r2.py  fix_force_stop.py  main.py  production_server.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  ruff.toml  start.py  test_local.py  test_r2_setup.py  worker.py
backend/app/: config.py  version.py
backend/docs/: API_DOCUMENTATION_WEB.md  API_TESTING_EXECUTION_PLAN.md  API_TESTING_QUICK_START.sh  CRON_SETUP.md  HETZNER_DEPLOYMENT_REPORT.md  HETZNER_OPTIMIZATION.md  TESTING_COMPLETE_2025-10-09.md  TESTING_SUMMARY.md  TEST_RESULTS_2025-10-09.md  validation-report.json
backend/migrations/: 20251011_add_viral_posts_count_function.sql  add_instagram_tags_fields.sql  (+2 more)
(+1407 files in other folders)
